# child-llm-assistant

./: .gitignore  README.md  instruction_train.ipynb  pyproject.toml  requirements.txt
agents/: child_agent.py  dialog_generator.py  friend_agent.py
api/: main.py
fastapi/: main.py
frontend/: gradio_ui.py
gradio/: gradio_ui.py
rag_system/: document_loader.py  index_builder.py  rag_chain.py  splitter.py  vectorstore.py
training/: clm_train.ipynb  colab_train.ipynb  generate_lora_config.py  instruction_train.ipynb  instruction_training.ipynb
utils/: clean_texts.py  prepare_datasets.py
